simple auto commit

--- a/app/wx_share.html
+++ b/app/wx_share.html
@@ -18,8 +18,8 @@
 
      
     function redirectWeChatUrl(){
-      var qd = getParameterByName("qd") || "default";
-       var WE_CHAT_URL="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx526ab87a436ee1c3&redirect_uri=http%3a%2f%2fweb.youbaowuxian.com%2fwx_share.html%3fqd%3d"+qd+"&response_type=code&scope=snsapi_base&state=123#wechat_redirect";
+     // var qd = getParameterByName("qd") || "default";
+       var WE_CHAT_URL="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx526ab87a436ee1c3&redirect_uri=http%3a%2f%2fweb.youbaowuxian.com%2fwx_share.html&response_type=code&scope=snsapi_base&state=123#wechat_redirect";
        var openId = sessionStorage.getItem("openId");//从首页跳转过来，不需要code
        if(!openId && location.href.indexOf("code")==-1){
             window.location.href=WE_CHAT_URL;
