--- a/app/index.html
+++ b/app/index.html
@@ -73,8 +73,9 @@
 
 <!-- /wrapper -->
   <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-  <script src="js/output/application.min.js?rev=eb35556891d97bc1f01b0394461b2efb"></script>
+  <script src="js/output/application.min.js?rev=6b82cca7c887aa8a801d23f032364ccb"></script>
   <script src="js/directives.js?rev=5e0047591b8595973f9946f67db591b2"></script>
+   <script src="js/main_controllers.js"></script>
   <!--
   <script src="wx_bx_gl/js/swiper.min.js"></script>
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
