--- a/app/electro_policy.html
+++ b/app/electro_policy.html
@@ -3,31 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>电子保单页</title>
-	<style type="text/css">
-	body {
-	   display: block;
-       margin: 8px;
-	}
-	*{line-height: 26px;font-family: "微软雅黑";color: #555;}
-	.policy-contrl{
-	    margin: 0 auto;   
-		width: 100%;
-	    padding-bottom: 20px;
-	    padding-top: 20px;
-	    background: #f5f5f5;
-	}
-	.contrl {
-		width: 640px;
-	    margin: 0 auto;
-	    padding-top: 40px;
-	    line-height: 26px;
-	    background: url('http://7xvrkw.com1.z0.glb.clouddn.com/back.png') no-repeat left top;
-	}
-	</style>
 </head>	
-<body>
-	<div class="policy-contrl">
-		<div class="contrl">
+<body style=" display: block;margin: 8px;line-height: 26px;font-family: "微软雅黑";color: #555;">
+	<div style=" margin: 0 auto;width: 100%;padding-bottom: 20px; padding-top: 20px; background: #f5f5f5;">
+		<div style="width: 640px; margin: 0 auto;padding-top: 40px;line-height: 26px;background: url('http://7xvrkw.com1.z0.glb.clouddn.com/back.png') no-repeat left top;">
 			<table>
 				<tr>
 					<td style="padding-left: 40px;"><img src="http://7xvrkw.com1.z0.glb.clouddn.com/nuobei_logo.png" style="width: 195px;" ></td>
@@ -76,17 +55,20 @@
 		    </table >
 		    <table style=" width: 565px;margin: 10px auto 0;font-size: 22.5px;">
 		    	<tr>
-		    		<td style="line-height: 30px;"><img src="http://7xvrkw.com1.z0.glb.clouddn.com/jian.png" style="width: 9px;vertical-align: -1px;margin-right: 10px;"> 保单查询：拨打天安客服 <span style="font-weight: bold;">4000-555-800</span> 或登录 <span style="font-weight: bold;">天 <span style="margin-left: 25px;">安人寿官网</span></span></td>
+		    		<td ><img src="http://7xvrkw.com1.z0.glb.clouddn.com/jian.png" style="width: 9px;vertical-align: 25px;margin-right: 10px;"></td>
+		    		<td style="line-height: 30px;"> 保单查询：拨打天安客服 <span style="font-weight: bold;">4000-555-800</span> 或登录 <span style="font-weight: bold;">天安人寿官网</span></td>
 		    	</tr>
 		    </table>
 		    <table style=" width: 565px;margin: 10px auto 0;font-size: 22.5px;">
 		    	<tr>
-		    		<td style="line-height: 30px;"><img src="http://7xvrkw.com1.z0.glb.clouddn.com/jian.png" style="width: 9px;vertical-align: -1px;margin-right: 10px;"> 电子保单：通过 【诺贝】 公众号 “我的订单”再<span style="margin-left: 25px;">次获取</span></td>
-		    	</t60
+		    		<td><img src="http://7xvrkw.com1.z0.glb.clouddn.com/jian.png" style="width: 9px;vertical-align: 25px;margin-right: 10px;"> </td>
+		    		<td style="line-height: 30px;">电子保单：通过 【诺贝】 公众号 “我的订单”再次获取</td>
+		    	</tr>
 		    </table>
 		    <table style=" width: 565px;margin: 10px auto 55px;font-size: 22.5px;">
 		    	<tr>
-		    		<td style="line-height: 30px;"><img src="http://7xvrkw.com1.z0.glb.clouddn.com/jian.png" style="width: 9px;vertical-align: -1px;margin-right: 10px;"> 理赔流程：请关注 【诺贝】 公众号，进入“保单管<span style="margin-left: 25px;">理” 查看</td>
+		    		<td ><img src="http://7xvrkw.com1.z0.glb.clouddn.com/jian.png" style="width: 9px;vertical-align: 25px;margin-right: 10px;"></td>
+		    		<td style="line-height: 30px;"> 理赔流程：请关注 【诺贝】 公众号，进入“保单管理” 查看</td>
 		    	</tr>
 		    </table>
 		     <table style="width:565px;margin: 10px auto 0;padding-bottom: 24px;font-size: 22.53px;margin-bottom: 24px;border-bottom: 1px solid #ccc;text-align: center;">
