--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,9 @@
     }
   </style>
 
- <link rel="stylesheet" href="css/output/application.min.css?rev=ee09f4e8b0b96b88f667fe0d3c0d0670"> 
+  <link rel="stylesheet" href="css/output/application.min.css?rev=ee09f4e8b0b96b88f667fe0d3c0d0670"> 
+  <link rel="stylesheet" href="js/lcalendar/dist/css/LCalendar.min.css"  >
+  <script src="js/lcalendar/dist/js/LCalendar.min.js"></script>
   </head>
 
 <body ontouchstart="" onselectstart="return false">
@@ -72,12 +74,15 @@
 </div>
 
 <!-- /wrapper -->
+
   <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-  <script src="js/output/application.min.js?rev=c0cd9715f24e855363ef92ba65a5ffc0"></script>
+  <script src="js/output/application.min.js?rev=eb11298bf07ab13dd3cca6682628d1dc"></script>
   <script src="js/directives.js?rev=5e0047591b8595973f9946f67db591b2"></script>
+
 
   <!--
   <script src="wx_bx_gl/js/swiper.min.js"></script>
+    
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/underscore/underscore-min.js"></script>
   <script src="bower_components/angular/angular.min.js"></script>
