simple auto commit

--- a/app/index.html
+++ b/app/index.html
@@ -27,9 +27,10 @@
     }
   </style>
 
-  <link rel="stylesheet" href="css/output/application.min.css?rev=ee09f4e8b0b96b88f667fe0d3c0d0670"> 
+  <link rel="stylesheet" href="css/output/application.min.css?rev=332190b4a569bdbd618ed1d096483a9a"> 
   <!-- <link rel="stylesheet" href="js/lcalendar/dist/css/LCalendar.min.css"  > -->
-  <!-- <script src="js/lcalendar/dist/js/LCalendar.min.js"></script> -->
+  <script src="js/lcalendar/dist/js/LCalendar.js"></script>
+  <!-- <script src="js/iscroll.js"></script> -->
   </head>
 
 <body ontouchstart="" onselectstart="return false">
@@ -45,7 +46,7 @@
       <p class="weui_toast_content" style="display:inline;">{{server_reason}}</p>
     </div>
   </div>
-  <div class="mask" id="loading">
+<!--   <div class="mask" id="loading">
   <div class="sk-fading-circle">
     <div class="sk-circle1 sk-circle"></div>
     <div class="sk-circle2 sk-circle"></div>
@@ -60,7 +61,7 @@
     <div class="sk-circle11 sk-circle"></div>
     <div class="sk-circle12 sk-circle"></div>
   </div>
-</div>
+</div> -->
   <div class="fixed-top" id="fix_to_top" style="display:none"><img src="img/top.png" style="width:50px;"></div>
   <!-- 礼物弹窗 -->
 <div class="swiper-ctrl" id ="share_ctrl">
@@ -76,7 +77,7 @@
 <!-- /wrapper -->
 
   <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-  <script src="js/output/application.min.js?rev=95741f29716e8bfb5df230db351052ad"></script>
+  <script src="js/output/application.min.js?rev=3456eae3d21f0c890231e3063252e166"></script>
   <script src="js/directives.js?rev=5e0047591b8595973f9946f67db591b2"></script>
 
 
