--- a/app/index.html
+++ b/app/index.html
@@ -77,7 +77,7 @@
 <!-- /wrapper -->
 
   <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-  <script src="js/output/application.min.js?rev=4793ce860c86f8ab19c7235f06dd1e6c"></script>
+  <script src="js/output/application.min.js?rev=bd1918af03a692523f5a6b7ba1f620bc"></script>
   <script src="js/directives.js?rev=5e0047591b8595973f9946f67db591b2"></script>
 
 
@@ -175,7 +175,7 @@
     function goSpecial() {
       window.location = "/wx_share.html#/special";
     }
-// window.addEventListener('load',function(){FastClick.attach(document.body);},false);
+window.addEventListener('load',function(){FastClick.attach(document.body);},false);
 </script>
   <img src="img/slider-btn.png?v=23423" id="tip-img" style="opacity: 0;position: absolute;left:-200000px;">
 </body>
