--- a/app/activity/mobile.html
+++ b/app/activity/mobile.html
@@ -68,7 +68,7 @@
 	</div>
 	<div class="share">
 		<div class="share_hezi">
-			<img src="img/share.jpg" >
+			<img src="img/new_share.png" >
 		</div>
 	</div>
 	<div class="footer_font">
