--- a/app/wx_gl.html
+++ b/app/wx_gl.html
@@ -29,23 +29,23 @@
 				<div class="swiper-wrapper swiper">
 
 					<div class="swiper-slide item " style="width:100%;height:180px;">
-						<a href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=507249567&idx=1&sn=3b2f4a588e4791a126275f01bd40c1d7#rd">
-							<div class="img js_img" style="background-image: url('img/gl/header_5.jpg');"></div>
+						<a href="http://mp.weixin.qq.com/s?__biz=MzI3MDM4MDIzOA==&mid=100000025&idx=1&sn=07223993c51887908380d9db5634f7cd&scene=0#rd">
+							<div class="img js_img" style="background-image: url('http://web.youbaowuxian.com/img/gl/header_5.jpg');"></div>
 							<p class="desc js_title">90%的人都不懂保险的意义</p>
 						</a>
 					</div>
 
 
 					<div class="swiper-slide item " style="width:100%;height:180px;">
-						<a href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=507249623&idx=1&sn=bdbc416f7a8f2c7cafc9f9dea2c502b7#rd">
-							<div class="img js_img" style="background-image: url('img/gl/gl_01.jpg');"></div>
+						<a href="http://mp.weixin.qq.com/s?__biz=MzI3MDM4MDIzOA==&mid=100000049&idx=1&sn=a69d9b363c44172f975165071285cf94&scene=0#rd">
+							<div class="img js_img" style="background-image: url('http://web.youbaowuxian.com/img/gl/gl_01.jpg');"></div>
 							<p class="desc js_title">社保究竟是万能？还是鸡肋？</p>
 						</a>
 					</div>
 
 				<div class="swiper-slide item " style="width:100%;height:180px;">
-						<a href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=507249594&idx=1&sn=471e26d76df65e0cc2d3f7d42dd49e85#rd">
-							<div class="img js_img" style="background-image: url('img/gl/gl_02.jpg');"></div>
+						<a href="http://mp.weixin.qq.com/s?__biz=MzI3MDM4MDIzOA==&mid=100000033&idx=1&sn=0336263c90d5514d49951d929f1e82f9&scene=0#rd">
+							<div class="img js_img" style="background-image: url('http://web.youbaowuxian.com/img/gl/gl_02.jpg');"></div>
 							<p class="desc js_title">保险就是要买不划算的</p>
 						</a>
 					</div>
@@ -61,58 +61,58 @@
 				<div class="tab_bd">
 
 					<div class="article_list article_list_0" >
-			            <a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=507249623&idx=1&sn=bdbc416f7a8f2c7cafc9f9dea2c502b7#rd">
+			            <a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI3MDM4MDIzOA==&mid=100000076&idx=1&sn=29c1311a8f404bc4269f77293e26f991&scene=0#rd">
 							<div class="cover">
-								<img class="img js_img" src="img/gl/gl_01.jpg" alt=""/>
+								<img class="img js_img" src="http://web.youbaowuxian.com/img/gl/small.jpg" alt=""/>
 							</div>
 							<div class="cont">
-								<h2 class="title js_title">社保究竟是万能？还是鸡肋？</h2>
-								<p class="desc">社保，是很多人知道的第一种保险。但是社保到底有什么用呢？社会保险和商业保险到底哪个更划算？很多人了解得并不确切。在朋友圈，我们常常会看到这样两种观点。</p>
+								<h2 class="title js_title">保险中介说保险公司绝对不会倒闭，是真的吗？</h2>
+								<p class="desc">保险公司是帮助我们转移风险的，那么保险公司自己的风险怎么办？只要是公司就有倒闭的可能，保险公司会倒闭吗？</p>
 							</div>
 						</a>
-						<a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=507249613&idx=1&sn=7cb76b31d026db1b3833de687aeb6ff6#rd">
+						<a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI3MDM4MDIzOA==&mid=100000071&idx=1&sn=271d8afd86314ade2cc35f5d7018632d&scene=0#rd">
 							<div class="cover">
-								<img class="img js_img" src="img/gl/gl_04.jpg" alt=""/>
-							</div>
-							<div class="cont">
-								<h2 class="title js_title">治疗大病到底有多贵？真的需要在朋友圈募捐吗？</h2>
-								<p class="desc">上周，小贝向大家揭示了一个残酷的真相：人一生得大病的概率竟然在70%以上。相信很多小伙伴的三观都被颠覆了，也因此产生了更多的困惑。很多人都知道一句俗话：一场大病压倒一家人。轻松筹的各种大病募捐也从侧面说明：大病使很多人的生活都不再轻松，背上了沉重的经济负担。</p>
-							</div>
-						</a>
-						<a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=507249594&idx=1&sn=471e26d76df65e0cc2d3f7d42dd49e85#rd">
-							<div class="cover">
-								<img class="img js_img" src="img/gl/gl_02.jpg" alt=""/>
-							</div>
-							<div class="cont">
-								<h2 class="title js_title">保险就是要买不划算的</h2>
-								<p class="desc">你可能不熟悉保险，但你一定听过这句话：“保险，就是在存零花钱的同时买一份保障。您发生意外，我们给您赔钱。您平安无事，我们给您返钱。”</p>
-							</div>
-						</a>
-						<a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=507249588&idx=1&sn=c0eeb2e49432494893fbfe1ce3d695c7#rd">
-							<div class="cover">
-								<img class="img js_img" src="img/gl/gl_05.jpg" alt=""/>
+								<img class="img js_img" src="http://web.youbaowuxian.com/img/gl/gl_05.jpg" alt=""/>
 							</div>
 							<div class="cont">
 								<h2 class="title js_title">朋友圈都在大病筹款，是因为得绝症的人变多了吗？</h2>
-								<p class="desc">最近同事们一起聊天，发现大家身边都有亲朋好友得了绝症。但在我们的印象里，绝症不是韩剧里才有的狗血桥段吗？得大病的人真的变多了，还是我们的错？</p>
+								<p class="desc">朋友圈总有为亲朋好友患病的筹款，得绝症的人越来越多，到底是不是错觉？</p>
 							</div>
 						</a>
-						<a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=507249567&idx=1&sn=3b2f4a588e4791a126275f01bd40c1d7#rd">
+						<a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI3MDM4MDIzOA==&mid=100000061&idx=1&sn=d8862e8301650b1ec0f0a093c059d6e8&scene=0#rd">
 							<div class="cover">
-								<img class="img js_img" src="img/gl/header_5.jpg" alt=""/>
+								<img class="img js_img" src="http://web.youbaowuxian.com/img/gl/gl_04.jpg" alt=""/>
 							</div>
 							<div class="cont">
-								<h2 class="title js_title">90%的人都不懂保险的意义</h2>
-								<p class="desc">
-									保险是一种有法律保障的风险转嫁的工具。投保人支付保费，把某种风险转嫁给保险公司。风险发生后，保险公司对该风险造成的损失进行经济赔偿或补偿
+								<h2 class="title js_title">治疗大病到底有多贵？真的需要在朋友圈募捐吗？</h2>
+								<p class="desc">大病到底会给我们带来多大的损失？究竟需要花多少钱治疗？ 话不多说，直接上数据。</p>
+							</div>
+						</a>
+						<a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI3MDM4MDIzOA==&mid=100000049&idx=1&sn=a69d9b363c44172f975165071285cf94&scene=0#rd">
+							<div class="cover">
+								<img class="img js_img" src="http://web.youbaowuxian.com/img/gl/gl_01.jpg" alt=""/>
+							</div>
+							<div class="cont">
+								<h2 class="title js_title">社保究竟是万能？还是鸡肋？</h2>
+								<p class="desc">社保，是很多人知道的第一份保险。但是社保到底有什么用呢？社会保险和商业保险到底哪个更划算？</p>
+							</div>
+						</a>
+						<a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI3MDM4MDIzOA==&mid=100000037&idx=1&sn=d4d09ffdad4124b84c2d112f5922bd7a&scene=0#rd">
+							<div class="cover">
+								<img class="img js_img" src="http://web.youbaowuxian.com/img/gl/small04.jpg" alt=""/>
+							</div>
+							<div class="cont">
+								<h2 class="title js_title">一分钟解读图表，让你了解生命周期的保险需求</h2>
+								<p class="desc">再完美的曲线，都会有波折的风险；只有正确的面对风险，选择正确的保障，才能让曲线保持完美。
 								</p>
 							</div>
 						</a>
 						
 
-						<a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=507249572&idx=1&sn=a345312b13c11f15960783ff64990cb4#rd">
+						<a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI3MDM4MDIzOA==&mid=100000033&idx=1&sn=0336263c90d5514d49951d929f1e82f9&scene=0#rd">
 							<div class="cover">
-								<img class="img js_img" src="img/gl/wx_know_how.jpg" alt=""/>
+								<img class="img js_img" src="http://web.youbaowuxian.com/img/gl/gl_02.jpg
+" alt=""/>
 							</div>
 							<div class="cont">
 								<h2 class="title js_title">知道这些，再也不用担心买错保险了</h2>
@@ -123,9 +123,9 @@
 						</a>
 
 
-						<a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=404311178&idx=1&sn=3964bc6bc301a5c2e91e6b2bb51a35d4#rd">
+						<a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI3MDM4MDIzOA==&mid=100000025&idx=1&sn=07223993c51887908380d9db5634f7cd&scene=0#rd">
 							<div class="cover">
-								<img class="img js_img" src="img/gl/small02.jpg" alt=""/>
+								<img class="img js_img" src="http://web.youbaowuxian.com/img/gl/header_5.jpg" alt=""/>
 							</div>
 							<div class="cont">
 								<h2 class="title js_title">一个小故事来帮你了解什么是『保险』</h2>
@@ -135,9 +135,9 @@
 							</div>
 						</a>
 
-						<a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=404311178&idx=2&sn=7e93c49d9ebed761e731b7146491125c#rd">
+						<a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI3MDM4MDIzOA==&mid=100000019&idx=1&sn=6d3ead01d6bed54dc311c256ebdd0c8d&scene=0#rd">
 							<div class="cover">
-								<img class="img js_img" src="img/gl/small03.jpg" alt=""/>
+								<img class="img js_img" src="http://web.youbaowuxian.com/img/gl/small.jpg" alt=""/>
 							</div>
 							<div class="cont">
 								<h2 class="title js_title">（深度）当不得不离开的的时候，你还能留下什么 </h2>
@@ -145,42 +145,7 @@
 							</div>
 						</a>
 
-						<a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=404311178&idx=3&sn=adf001537fb848c806ccd937252d1899#rd">
-							<div class="cover">
-								<img class="img js_img" src="img/gl/small04.jpg" alt=""/>
-							</div>
-							<div class="cont">
-								<h2 class="title js_title">一分钟解读图表，让你了解生命周期的保险需求</h2>
-								<p class="desc">这是一张理想的人生收入图表，一张近完美的曲线图，但是人的生命周期内会存在着健康和安全的风险，随时有可能把增长</p>
-							</div>
-						</a>
-			             <a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=404311178&idx=4&sn=8d0e95f2fff266e3e8b62b969549b5c1#rd">
-							<div class="cover">
-								<img class="img js_img" src="img/gl/small02.jpg" alt=""/>
-							</div>
-							<div class="cont">
-								<h2 class="title js_title">我们真的有必要买保险吗？</h2>
-								<p class="desc">生活中，我们过马路、生孩子、坐飞机……等等都存在着风险，所以它是客观存在的，那么诉求就很明确，有风险存在，保险的存在肯定也是必然的</p>
-							</div>
-						</a>
-						  <a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=404311178&idx=5&sn=ef0e6f270baeb07f9a09f5db1a26d85d#rd">
-							<div class="cover">
-								<img class="img js_img" src="img/gl/small05.jpg" alt=""/>
-							</div>
-							<div class="cont">
-								<h2 class="title js_title">电子保单如何验真？</h2>
-								<p class="desc">在互联网上买保险，很多人心里还有着疑问，我们该如何验证我们的投保是否有效呢？</p>
-							</div>
-						</a>
-  						<a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI0NDE2Mjk2OA==&mid=407057806&idx=1&sn=d6136f57ac70f0ae4504c657355a6989#rd">
-							<div class="cover">
-								<img class="img js_img" src="img/gl/small.jpg" alt=""/>
-							</div>
-							<div class="cont">
-								<h2 class="title js_title">诺贝保险管家 — 一个改变保险行业的梦想</h2>
-								<p class="desc">北京有保无险科技有限公司成立于2016年1月，创始团队由互联网行业精英和保险行业精英组成。诺贝保险管家为公司推出的新一代互联网保险产品。产品正在开发中，我们的目标是让每一位普通人都能用诺贝保险管家轻松无忧地保障自己的一生。</p>
-							</div>
-						</a>
+						
 					</div>
 				</div>
 			</div>
