simple auto commit

--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
   <div class="wx-tip"></div>
 </div>
   <div id="toast" style="display: none;">
-    <div class="weui_mask_transparent"></div>
+    <!-- <div class="weui_mask_transparent"></div> -->
     <div class="toast" style="background:rgba(40,40,40,.75);color:#fff;max-width:400px;width:65%;margin:auto;z-index:100000;padding:0.2rem;text-align: center;">
       <p class="weui_toast_content" style="display:inline;">{{server_reason}}</p>
     </div>
@@ -58,7 +58,7 @@
 <!-- /wrapper -->
 
   <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-  <script src="js/output/application.min.js?rev=33b02cbc2d0ff0e661654b98425ae276"></script>
+  <script src="js/output/application.min.js?rev=1c0221232f2038b3872a41445e6a4de6"></script>
   <script src="js/directives.js?rev=5e0047591b8595973f9946f67db591b2"></script>
   <script  src="/js/agecommon.js?rev=a87287c04adc78835eef73ecef42fef8"></script>
 
