偏好设定(根据用户在资料设定页选择的年龄对应)

--- a/app/wx_gl.html
+++ b/app/wx_gl.html
@@ -49,8 +49,6 @@
 							<p class="desc js_title">保险就是要买不划算的</p>
 						</a>
 					</div>
-
-					
 				</div>
 				<!-- Add Pagination -->
 				<div class="swiper-pagination" style="bottom:11px;text-align:right"></div>
@@ -63,7 +61,7 @@
 					<div class="article_list article_list_0" >
 			            <a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI3MDM4MDIzOA==&mid=100000076&idx=1&sn=29c1311a8f404bc4269f77293e26f991&scene=0#rd">
 							<div class="cover">
-								<img class="img js_img" src="http://web.youbaowuxian.com/img/gl/small.jpg" alt=""/>
+								<img class="img js_img" src="http://7xvrkw.com1.z0.glb.clouddn.com/tutu.png" alt=""/>
 							</div>
 							<div class="cont">
 								<h2 class="title js_title">保险中介说保险公司绝对不会倒闭，是真的吗？</h2>
@@ -111,14 +109,11 @@
 
 						<a class="list_item js_post" href="http://mp.weixin.qq.com/s?__biz=MzI3MDM4MDIzOA==&mid=100000033&idx=1&sn=0336263c90d5514d49951d929f1e82f9&scene=0#rd">
 							<div class="cover">
-								<img class="img js_img" src="http://web.youbaowuxian.com/img/gl/gl_02.jpg
-" alt=""/>
+								<img class="img js_img" src="http://web.youbaowuxian.com/img/gl/gl_02.jpg" alt=""/>
 							</div>
 							<div class="cont">
-								<h2 class="title js_title">知道这些，再也不用担心买错保险了</h2>
-								<p class="desc">
- 									在Get如何买保险的技能之前，首先我们要明白为什么买保险。请阅读小贝的另一篇文章《90%的人都不懂保险的意义》。读完之后我们就会知道，买保险最基本的目的是为了规避未知风险，让生活不被风险改变。
-								</p>
+								<h2 class="title js_title">保险就是要买不划算的</h2>
+								<p class="desc">买保险是为了预防小概率风险，如果这个风险没发生， 钱岂不是白交了？</p>
 							</div>
 						</a>
 
@@ -128,10 +123,8 @@
 								<img class="img js_img" src="http://web.youbaowuxian.com/img/gl/header_5.jpg" alt=""/>
 							</div>
 							<div class="cont">
-								<h2 class="title js_title">一个小故事来帮你了解什么是『保险』</h2>
-								<p class="desc">
-									保险是什么呢？小贝跟身边的朋友们谈及保险，发现很多朋友对保险都不是很清楚。近日，小贝浏览网站，发现一则小故事对保险的解释很到位，所以就拿出来与大家共享一下
-								</p>
+								<h2 class="title js_title">90%的人都不懂保险的意义</h2>
+								<p class="desc">什么是保险？小贝要说的绝不是教科书式的废话，事实上90%的人都不懂保险真正的意义。</p>
 							</div>
 						</a>
 
@@ -140,12 +133,10 @@
 								<img class="img js_img" src="http://web.youbaowuxian.com/img/gl/small.jpg" alt=""/>
 							</div>
 							<div class="cont">
-								<h2 class="title js_title">（深度）当不得不离开的的时候，你还能留下什么 </h2>
-								<p class="desc">爱是伟大的，我们要传递的不仅仅是对家人的爱，还有更多的是对家人的那份爱的责任。</p>
+								<h2 class="title js_title">诺贝保险管家 — 一个改变保险行业的梦想</h2>
+								<p class="desc">我们『不懂保险』，但我们知道保险本质是规避风险。购买保险首先要考虑是保障，而不是理财。</p>
 							</div>
-						</a>
-
-						
+						</a>						
 					</div>
 				</div>
 			</div>
