simple auto commit

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
     }
   </style>
 
-  <link rel="stylesheet" href="css/output/application.min.css?rev=68a37a8da50d4751ad2af1abedd30aaf"> 
+  <link rel="stylesheet" href="css/output/application.min.css?rev=720869f991a9b6255ae504a65c02b6d7"> 
   <!-- <link rel="stylesheet" href="js/lcalendar/dist/css/LCalendar.min.css"  > -->
   <script src="js/lcalendar/dist/js/LCalendar.js"></script>
   </head>
@@ -58,9 +58,10 @@
 <!-- /wrapper -->
 
   <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-  <script src="js/output/application.min.js?rev=265a070903486c263ed892750609589c"></script>
+  <script src="js/output/application.min.js?rev=a1ee7d72a1ede61580f0e5d4e1506fd0"></script>
   <script src="js/directives.js?rev=5e0047591b8595973f9946f67db591b2"></script>
   <script  src="/js/agecommon.js?rev=a87287c04adc78835eef73ecef42fef8"></script>
+  <script  src="/js/dashboard.js?rev=63bbad5593fba2c42be7808e7b403484"></script>
 
   <!--
   <script src="js/angular-busy.min.js"></script>
