--- a/app/index.html
+++ b/app/index.html
@@ -57,13 +57,13 @@
 <!-- /wrapper -->
 
   <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-  <script src="js/output/application.min.js?rev=4b1fce807c13bfb38cf2e68ca3cdf328"></script>
+  <script src="js/output/application.min.js?rev=59a0384c0b2a5b78fefa9d2619f2dfae"></script>
   <script src="js/directives.js?rev=5e0047591b8595973f9946f67db591b2"></script>
   <script  src="/js/agecommon.js?rev=decd93797a37e97b67a65ccc0bd02441"></script>
   <script  src="/js/dashboard.js?rev=87fa22737de17a50877b47e828ffe00f"></script>
-
   <!--
   <script src="js/angular-busy.min.js"></script>
+  <script src="js/transaction_controllers.js"></script>
   <script src="js/util.js"></script>
   <script src="js/app.js"></script>
   <script src="js/main_controllers.js"></script>
