缺分享追踪逻辑调整

--- a/app/anxiang.html
+++ b/app/anxiang.html
@@ -8,7 +8,7 @@
   <meta name="viewport"content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>天寿助富您安享</title>
   <link rel="stylesheet" type="text/css" href="bower_components/normalize-css/normalize.css">
-  <link rel="stylesheet" href="anxiang/css/style.css?rev=250fa7ebe1def13cc13a684fd587e980">
+  <link rel="stylesheet" href="anxiang/css/style.css?rev=d6abbfcc2f1674eb0ea72efe62f195b1">
  
 
   </head>
@@ -25,8 +25,8 @@
   <script src="js/util.js?v=aafafaf"></script>
   <script>
     util.share({
-          shareUrl: "http://web.youbaowuxian.com/anxiang_index.html",
-          shareImg: "http://web.youbaowuxian.com/anxiang/img/money.jpg",
+          shareUrl: "http://wechat.nuobei.cn/anxiang_index.html",
+          shareImg: "http://wechat.nuobei.cn/anxiang/img/money.jpg",
           shareTitle: "天寿助富您安享",
           shareDesc: "即交快领高返还，满5年折合年化单利约4.5%!"
 
