--- a/app/test.html
+++ b/app/test.html
@@ -38,7 +38,7 @@
 					/*
 					$("#newTbBtn").click(function(){
 								sessionStorage.setItem("isNew","true");
-								window.location.href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx526ab87a436ee1c3&redirect_uri=http%3A%2F%2Fweb.youbaowuxian.com&response_type=code&scope=snsapi_base&state=123#wechat_redirect";
+								window.location.href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx526ab87a436ee1c3&redirect_uri=http%3A%2F%2Fwechat.nuobei.cn&response_type=code&scope=snsapi_base&state=123#wechat_redirect";
 
 					});*/
 					function showPosition(position){
