--- a/app/anxiang_index.html
+++ b/app/anxiang_index.html
@@ -17,14 +17,14 @@
   <script src="js/util.js?v=afaf"></script>
   <script>
     util.share({
-          shareUrl: "http://web.youbaowuxian.com/anxiang_index.html",
-          shareImg: "http://web.youbaowuxian.com/anxiang/img/money.jpg",
+          shareUrl: "http://wechat.nuobei.cn/anxiang_index.html",
+          shareImg: "http://wechat.nuobei.cn/anxiang/img/money.jpg",
           shareTitle: "天寿助富您安享",
           shareDesc: "即交快领高返还，满5年折合年化单利约4.5%!"
 
     },true);
 
-    //SHARE.init("http://web.youbaowuxian.com/anxiang_index.html");
+    //SHARE.init("http://wechat.nuobei.cn/anxiang_index.html");
     var _hmt = _hmt || [];
     _hmt.push(['_setAutoPageview', false]);
     (function() {
