增加全局引用页面碎片，用于导入服务端配置

--- a/app/anxiang_detail.html
+++ b/app/anxiang_detail.html
@@ -7,6 +7,8 @@
   <meta name="keywords" content="天寿助富您安享">
   <meta name="viewport"content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>天寿助富您安享</title>
+    <?php include('include/global_config.html'); ?>
+
   <link rel="stylesheet" type="text/css" href="bower_components/normalize-css/normalize.css">
   <link rel="stylesheet" href="anxiang/css/style.css?rev=d6abbfcc2f1674eb0ea72efe62f195b1">
   </head>
