--- a/app/electro_policy.html
+++ b/app/electro_policy.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>电子保单页</title>
+	<?php include('include/global_config.html'); ?>
+
 </head>	
 <body style=" display: block;margin: 8px;line-height: 26px;font-family: "微软雅黑";color: #555;">
 	<style>
