--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,8 @@
       opacity: 1 !important;    /* */
     }
   </style>
+  <?php include('include/global_config.html'); ?>
+
   <link rel="stylesheet" href="css/output/application.min.css?rev=ce01f8a1fbb18556fd1535d335199e9c"> 
   <!-- <link rel="stylesheet" href="js/lcalendar/dist/css/LCalendar.min.css"  > -->
   <script src="js/lcalendar/dist/js/LCalendar.js"></script>
