--- a/app/wx_gl.html
+++ b/app/wx_gl.html
@@ -11,6 +11,8 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="format-detection" content="telephone=no">
 	<title>诺贝保险</title>
+	<?php include('include/global_config.html'); ?>
+
 	  <script>
     var _hmt = _hmt || [];
     (function() {
