--- a/app/wx_share.html
+++ b/app/wx_share.html
@@ -7,6 +7,8 @@
   <meta name="keywords" content="">
   <meta name="viewport"content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>诺贝保险管家</title>
+  <?php include('include/global_config.html'); ?>
+
   <script>
 
     function getParameterByName(name) {
