引入ci的错误页面；全局配置增加用户参数

--- a/app/testwechatpay/pay.html
+++ b/app/testwechatpay/pay.html
@@ -98,10 +98,7 @@
 
 function getHttpPromise($http,  method, url, data, callback) {
 
-	var openId = sessionStorage.getItem("openId");
-	if (!data["open_id"]) {
-		data["open_id"] = openId;
-	}
+		data["open_id"] = '--';
 	data["wechat_type"] = 2;
 	return $http({
 		method: method,
@@ -191,9 +188,7 @@ app.controller('wechatPayCtrl', ['$scope', '$filter', '$routeParams', '$location
 		}
 
 		$scope.ajaxPayInfo = function(channelType) {
-			var openId = sessionStorage.getItem("openId");
 			$scope.payPromise = getHttpPromise($http,  'POST', '/ybwx-web/api/insurance/pay', {
-				open_id: openId,
 				pay_order_id: $scope.order_id,
 				pay_channel_type: channelType,
 				wechat_type: 2
