--- a/app/testwechatpay/pay.html
+++ b/app/testwechatpay/pay.html
@@ -233,22 +233,23 @@ app.controller('wechatPayCtrl', ['$scope', '$filter', '$routeParams', '$location
 					// 	timeStamp:timestamp
 					// }
 
-					var signObj = {
-						appId:$scope.wechat_response.appId,
-						nonceStr:nonceStr,
-						package: $scope.wechat_response.packageStr,
-						signType:"MD5",
-						timeStamp:timestamp,
-						key:"rfok7L6GheVhk6JcfjsCNnO0hQBKWHpF"
-					}
 					// var signObj = {
 					// 	appId:$scope.wechat_response.appId,
-					// 	nonceStr:$scope.wechat_response.nonceStr,
+					// 	nonceStr:nonceStr,
 					// 	package: $scope.wechat_response.packageStr,
 					// 	signType:"MD5",
-					// 	timeStamp:$scope.wechat_response.timestamp,
+					// 	timeStamp:timestamp,
 					// 	key:"rfok7L6GheVhk6JcfjsCNnO0hQBKWHpF"
 					// }
+					
+					var signObj = {
+						appId:$scope.wechat_response.appId,
+						nonceStr:$scope.wechat_response.nonceStr,
+						package: $scope.wechat_response.packageStr,
+						signType:"MD5",
+						timeStamp:$scope.wechat_response.timestamp,
+						key:"rfok7L6GheVhk6JcfjsCNnO0hQBKWHpF"
+					}
 
 					var signStr = util.genParameters(signObj);
 					alert(signStr);
