--- a/app/wechatpay/pay.html
+++ b/app/wechatpay/pay.html
@@ -218,38 +218,25 @@ app.controller('wechatPayCtrl', ['$scope', '$filter', '$routeParams', '$location
 					alert("package:"+ $scope.wechat_response.packageStr);	
 					alert("paySign:"+ $scope.wechat_response.paySign);	*/
 
+			
+
+					
+					var signObj = {
+						appId:$scope.wechat_response.appId,
+						nonceStr:nonceStr,
+						package: $scope.wechat_response.packageStr,
+						signType:"MD5",
+						timeStamp:timestamp,
+						key:"rfok7L6GheVhk6JcfjsCNnO0hQBKWHpF"
+					}
 					// var signObj = {
 					// 	appId:$scope.wechat_response.appId,
 					// 	nonceStr:$scope.wechat_response.nonceStr,
 					// 	package: $scope.wechat_response.packageStr,
 					// 	signType:"MD5",
-					// 	timeStamp:$scope.wechat_response.timestamp
-					// }
-					// var signObj = {
-					// 	appId:$scope.wechat_response.appId,
-					// 	nonceStr:nonceStr,
-					// 	package: $scope.wechat_response.packageStr,
-					// 	signType:"MD5",
-					// 	timeStamp:timestamp
-					// }
-
-					// var signObj = {
-					// 	appId:$scope.wechat_response.appId,
-					// 	nonceStr:nonceStr,
-					// 	package: $scope.wechat_response.packageStr,
-					// 	signType:"MD5",
-					// 	timeStamp:timestamp,
+					// 	timeStamp:$scope.wechat_response.timestamp,
 					// 	key:"rfok7L6GheVhk6JcfjsCNnO0hQBKWHpF"
 					// }
-					
-					var signObj = {
-						appId:$scope.wechat_response.appId,
-						nonceStr:$scope.wechat_response.nonceStr,
-						package: $scope.wechat_response.packageStr,
-						signType:"MD5",
-						timeStamp:$scope.wechat_response.timestamp,
-						key:"rfok7L6GheVhk6JcfjsCNnO0hQBKWHpF"
-					}
 
 					var signStr = util.genParameters(signObj);
 					alert(signStr);
