--- a/app/wechatpay/pay.html
+++ b/app/wechatpay/pay.html
@@ -248,7 +248,7 @@ app.controller('wechatPayCtrl', ['$scope', '$filter', '$routeParams', '$location
 
 
 					wx.chooseWXPay({
-					timestamp:signObj.timestamp,
+					timestamp:signObj.timeStamp,
 					nonceStr: signObj.nonceStr, // 支付签名随机串，不长于 32 位
 					package: signObj.package, // 统一支付接口返回的prepay_id参数值，提交格式如：prepay_id=***）
 					signType: 'MD5', // 签名方式，默认为'SHA1'，使用新版支付需传入'MD5'
